--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script:
 - ls **
 
 deploy:
+  local_dir: docs
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
