About me and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ bokeh
 git+https://github.com/tonyfast/importable
 git+https://github.com/tonyfast/literacy
 git+https://github.com/tonyfast/nbd
+git+https://github.com/tonyfast/wip
